Updated project file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@
 #select = ["I", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF"]
 lint.select = ["ALL"]
 # we need to check 'mood' of all docstrings, this needs to be enabled explicitly
-extend-select = ["D401"]
+extend-select = ["D401", "N802"]
 
-ignore = ["F841", "F405", "F403"]
+ignore = ["F841", "F405", "F403", "RET505"]
 
 target-version = "py311"
 pydocstyle.convention = "google"
@@ -19,7 +19,7 @@ flake8-pytest-style.fixture-parentheses = false
 fail_under = 90
 
 [tool.mypy]
-disable_error_code = ["union-attr", "return-value", "misc", "call-arg", "import-untyped"]
+disable_error_code = []
 ignore_missing_imports = true
 
 [tool.pdm]
@@ -28,37 +28,19 @@ distribution = false
 [tool.pdm.dev-dependencies]
 dev = [
     "black>=24.1.1",
-    "httpx>=0.26.0",
     "mypy>=1.8.0",
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
     "ruff>=0.1.14",
-    # types-requests<2.31.0.7 to avoid upgrading urllib3>1.27 that breaks ibm-cos-sdk-core 2.13.
-    # todo: remove when ibm-cos-sdk-core does not depend on urllib3<1.27.
-    "types-requests<2.31.0.7"
 ]
 
 [project]
-name = "ols"
-version = "0.1.0"
-description = "OpenShift LightSpeed is an AI powered assistant that runs on OpenShift and provides answers to product questions using backend LLM services."
+name = "Chainring"
+version = "1.0.0"
+description = "Simple CAD written in Python+Tkinter combination with remote storage support"
 authors = []
 dependencies = [
-    "fastapi==0.109.1",
-    "gradio==4.16.0",
-    "langchain==0.1.4",
-    "llama-index==0.9.39",  # dev dep?
-    "uvicorn==0.27.0.post1",
-    "redis==5.0.1",
-    "faiss-cpu==1.7.4",
-    "sentence-transformers==2.3.0",
-    "openai==1.10.0",
-    "ibm-watson-machine-learning==1.0.344",
-    "ibm-generative-ai==2.0.0",
-    "langchain-openai==0.0.5",
-    "pydantic==2.6.0",
-    "setuptools>=69.0.3",
-    "prometheus-client>=0.19.0",
+    "requests"
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
